# sovereignSpec

./: .coverage  .gitignore  2026-06-12-sovereignspec-local-first-spec-driven-development.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docSpec.md  pyproject.toml  sovereignSpec-test-report.md  sovereignspec-test-report2.md  sovereignspec_test_report03.md  sovereignspec_test_report04.md  todo.md
.sovereignspec/: bootstrap.md
.sovereignspec/grammar/: adr.gbnf  api_spec.gbnf  contradiction_report.gbnf  drift_report.gbnf  implementation_plan.gbnf  spec_validation_result.gbnf  task_list.gbnf  test_case.gbnf
.sovereignspec/patterns/: pattern_library.json  repository_map.json
.sovereignspec/specs/: my-first-spec.sspec
.sovereignspec/templates/: adr-template.md  spec-template.sspec  tasks-template.md
docs/: AGENT_INTEGRATION.md  CLI_REFERENCE.md  DEVELOPMENT.md  GBNF_GRAMMARS.md  INSTALLATION.md  KNOWLEDGE_GRAPH.md  SECURITY.md  SPECIFICATION_FORMAT.md  SPEC_DRIVEN_WORKFLOW.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md
scripts/: verify_docs.py
sovereignspec/: __main__.py
sovereignspec/adapters/: __init__.py  aider.py  base.py  claude_code.py  cline.py  codex.py  continue_.py  cursor.py  gemini_cli.py  generic.py  opencode.py  roocode.py  windsurf.py
sovereignspec/cli/: main.py
sovereignspec/engine/: __init__.py  compiler.py  contradiction.py  drift.py  grammar.py  graph.py  rag.py  repository.py  validator.py  watcher.py
sovereignspec/models/: adr.py  (+5 more)
tests/: conftest.py
ui/: package.json
(+73 files in other folders)
